dataset1235/2025-2/1153765216/users/896391410/executions/2814675586_1026882843.log
== SUBMISSION (2025-08-26 19:31:43)
-- CODE: 
raio = float(input())
pi  = float(input())
area = pi * raio**2
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:58:39)
-- CODE: 
raio = float(input())
area = pi * (raio**2)
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * (raio**2)
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * (raio**2)
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * (raio**2)
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * (raio**2)
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * (raio**2)
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * (raio**2)
           ^^
NameError: name 'pi' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:02:24)
-- CODE: 
raio = float(input())
var  = pi
area = pi * raio**2
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = pi
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = pi
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = pi
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = pi
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = pi
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = pi
           ^^
NameError: name 'pi' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:33:40)
-- CODE: 
raio = float(input())
pi  = float(input())
area = pi * raio**2
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:41:19)
-- CODE: 
raio = float(input())
pi  = float(input())
area = pi * raio**2
print((area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:02:07)
-- CODE: 
raio = float(input())
var  = float(input(pi))
area = pi * raio**2
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = float(input(pi))
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = float(input(pi))
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = float(input(pi))
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = float(input(pi))
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = float(input(pi))
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = float(input(pi))
                       ^^
NameError: name 'pi' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:02:08)
-- CODE: 
raio = float(input())
var  = float(input(pi))
area = pi * raio**2
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = float(input(pi))
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = float(input(pi))
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = float(input(pi))
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = float(input(pi))
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = float(input(pi))
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = float(input(pi))
                       ^^
NameError: name 'pi' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:31:58)
-- CODE: 
raio = float(input())
pi  = float(input())
area = pi * raio**2
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:01:32)
-- CODE: 
raio = float(input())
var  = pi
area = pi * raio**2
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = pi
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = pi
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = pi
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = pi
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = pi
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = pi
           ^^
NameError: name 'pi' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:18:25)
-- CODE: 
raio = float(input())
area = pi * raio**
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
File "XXXX", line 2
    area = pi * raio**
                      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
File "XXXX", line 2
    area = pi * raio**
                      ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
File "XXXX", line 2
    area = pi * raio**
                      ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
File "XXXX", line 2
    area = pi * raio**
                      ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
File "XXXX", line 2
    area = pi * raio**
                      ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
File "XXXX", line 2
    area = pi * raio**
                      ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:00:11)
-- CODE: 
raio = float(input())
pi   = float(input())
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi   = float(input())
                 ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi   = float(input())
                 ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi   = float(input())
                 ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi   = float(input())
                 ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi   = float(input())
                 ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi   = float(input())
                 ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:55:45)
-- CODE: 
raio = float(input())
pi  = float(input())
area = pi * raio** 2
print(area, 4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:00:33)
-- CODE: 
raio = float(input())
area = pi * raio**2
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:41:39)
-- CODE: 
raio = float(input())
pi  = float(input())
area = pi * raio**2
print(area, 4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:01:44)
-- CODE: 
raio = float(input())
var  = input(pi)
area = pi * raio**2
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = input(pi)
                 ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = input(pi)
                 ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = input(pi)
                 ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = input(pi)
                 ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = input(pi)
                 ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var  = input(pi)
                 ^^
NameError: name 'pi' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
